--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1><b><B22222>Joshua Paz</B22222></b></h1>
+			<p>home &middot; art &middot; changes</p>
 		</div>
 
 
@@ -30,51 +30,31 @@
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div id="project1">
 			<a href="project.html">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
+				<img src="images/embodiment.png" alt="Embodiment image">
 				<p>Waiting in Line</p>
 			</a>
 		</div>
 		<div id="project2">
 			<a href="project.html">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
+				<img src="images/cores.png" alt="The Core">
 				<p>Needfinding</p>
 			</a>
 		</div>
 		<div id="project3">
 			<a href="project.html">
-				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
+				<img src="images/pyramid.png" alt="Pyramid">
 				<p>Prototyping</p>
 			</a>
 		</div>
 		<div id="project4">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
-				<p>Heuristic Evaluation</p>
-			</a>
 		</div>
 		<div id="project5">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
-				<p>Visualization</p>
-			</a>
 		</div>
 		<div id="project6">
-			<a href="project.html">
-				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
-				<p>Social design</p>
-			</a>
 		</div>
 		<div id="project7">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
-				<p>Gestural interaction</p>
-			</a>
 		</div>
 		<div id="project8">
-			<a href="project.html">
-				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
-				<p>Design tools</p>
-			</a>
 		</div>
 	</div>
 </body>
