--- a/static/index.html
+++ b/static/index.html
@@ -31,19 +31,19 @@
 		<div id="project1">
 			<a href="project.html">
 				<img src="images/embodiment.png" alt="Embodiment image">
-				<p>Waiting in Line</p>
+				<p>The embodiment of differences with the implementation of lines and figures that one can imagine.</p>
 			</a>
 		</div>
 		<div id="project2">
 			<a href="project.html">
 				<img src="images/cores.png" alt="The Core">
-				<p>Needfinding</p>
+				<p>Core models that represent different sources.</p>
 			</a>
 		</div>
 		<div id="project3">
 			<a href="project.html">
 				<img src="images/pyramid.png" alt="Pyramid">
-				<p>Prototyping</p>
+				<p>The pyramid model</p>
 			</a>
 		</div>
 		<div id="project4">
