--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1><b><B22222>Joshua Paz</B22222></b></h1>
-			<p>home &middot; art &middot; changes</p>
+			<h1><b style = "font-family:Arial,garamond,serif;font-size:16px;font-style:bold;"><B22222>Joshua Paz</B22222></b></h1>
+			<p style = "font-family:georgia,garamond,serif;font-size:16px;font-style:italic;">home &middot; art &middot; changes</p>
 		</div>
 
 
@@ -31,19 +31,19 @@
 		<div id="project1">
 			<a href="project.html">
 				<img src="images/embodiment.png" alt="Embodiment image">
-				<p>The embodiment of differences with the implementation of lines and figures that one can imagine.</p>
+				<p style = "font-family:georgia,garamond,serif;font-size:16px;font-style:italic;">The embodiment of differences with the implementation of lines and figures that one can imagine.</p>
 			</a>
 		</div>
 		<div id="project2">
 			<a href="project.html">
 				<img src="images/cores.png" alt="The Core">
-				<p>Core models that represent different sources.</p>
+				<p style = "font-family:georgia,garamond,serif;font-size:16px;font-style:italic;">Core models that represent different sources.</p>
 			</a>
 		</div>
 		<div id="project3">
 			<a href="project.html">
 				<img src="images/pyramid.png" alt="Pyramid">
-				<p>The pyramid model</p>
+				<p style = "font-family:georgia,garamond,serif;font-size:16px;font-style:italic;">The pyramid model</p>
 			</a>
 		</div>
 		<div id="project4">
@@ -59,3 +59,4 @@
 	</div>
 </body>
 </html>
+
