--- a/static/project.html
+++ b/static/project.html
@@ -2,7 +2,7 @@
   <html>
     <body>
 
-      <div><h1><p> Project Names</h1></p></div>
+      <div><h1><p style = "font-family:georgia,garamond,serif;font-size:16px;font-style:italic;"> Project Names</h1></p></div>
       <div><h2> Cores</h2></div>
       <div><h3> Pyramid </h3></div>
       <div><h4> Embodiment of the Mind</h4></div>
@@ -10,3 +10,4 @@
 
       </body>
   </html>
+
